--- a/mobile-apps/driver-app/app/src/main/res/values/strings.xml
+++ b/mobile-apps/driver-app/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">DriverApp</string>
+    <string name="app_name">Driver\'s application</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="repeatPassword">Repeat Password</string>
+    <string name="login">Login</string>
+    <string name="register">Register</string>
+    <string name="registerHere">Register Here</string>
 </resources>
