[driver-app] upgraded login with material, fixed dependencies.

--- a/mobile-apps/driver-app/app/src/main/res/values/strings.xml
+++ b/mobile-apps/driver-app/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="register">Register</string>
     <string name="registerHere">No Account yet? Create one</string>
     <string name="toastMessage">toast</string>
+    <string name="logo">logo</string>
 </resources>
