[driver-app] Login > Added textInput validators

--- a/mobile-apps/driver-app/app/src/main/res/values/strings.xml
+++ b/mobile-apps/driver-app/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="registerHere">No Account yet? Create one</string>
     <string name="toastMessage">toast</string>
     <string name="logo">logo</string>
+    <string name="requiredError">Required!</string>
 </resources>
