[driver-app] Register now uses material theme.
Also:
*Login > fixed input errors to appear on layout instead of the actual EditText element.
*Login/Register > fixed auto focus on activity start.
*Utils > changed password validator to dummy for now.

--- a/mobile-apps/driver-app/app/src/main/res/values/strings.xml
+++ b/mobile-apps/driver-app/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="toastMessage">toast</string>
     <string name="logo">logo</string>
     <string name="requiredError">Required!</string>
+    <string name="emailError">Invalid Email!</string>
+    <string name="usernameError">Invalid Username! TODO pattern!</string>
+    <string name="repeatPasswordError">Password doesn\'t match!</string>
+    <string name="passwordError">Invalid Password! TODO pattern!</string>
 </resources>
