[driver-app] Split actionBar into auth/unauth versions and disabled userArea back button.

--- a/mobile-apps/driver-app/app/src/main/res/values/strings.xml
+++ b/mobile-apps/driver-app/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="exit">exit</string>
     <string name="action_search">search</string>
     <string name="action_notifications">notifications</string>
+    <string name="loginTittle">Login</string>
+    <string name="registerTitle">Register</string>
+    <string name="userAreaTitle">Home</string>
 </resources>
